fix spacing issue when footer is sticky

--- a/ui/controls/inspector-footer.reel/inspector-footer.css
+++ b/ui/controls/inspector-footer.reel/inspector-footer.css
@@ -1,6 +1,5 @@
 .ScrollviewFooterWrapper .InspectorFooter {
     background: rgba(0,0,0,.15);
-    margin-right: 0;
     box-shadow: 0 -2px 6px rgba(0,0,0,.3);
 }
 
